# papyrus-bot

./: Chart.yaml  Dockerfile  main.py  pyproject.toml  values.yaml
.github/workflows/: build_publish.yml  lint_build.yml
bot/: __init__.py  helper.py
bot/api/: __init__.py  models.py
templates/: configmap.yml
